crates/pg_syntax/tests/snapshots/data/0047@3.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE DATABASE x LC_COLLATE \"en_US.UTF-8\";"
---
CreatedbStmt@0..43
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Database@7..15 "DATABASE"
  Whitespace@15..16 " "
  Ident@16..17 "x"
  Whitespace@17..18 " "
  DefElem@18..42
    Ident@18..28 "LC_COLLATE"
    Whitespace@28..29 " "
    Ident@29..42 "\"en_US.UTF-8\""
  Ascii59@42..43 ";"

