crates/pg_syntax/tests/snapshots/data/0047@4.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE DATABASE x LOCATION DEFAULT;
---
CreatedbStmt@0..35
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Database@7..15 "DATABASE"
  Whitespace@15..16 " "
  Ident@16..17 "x"
  Whitespace@17..18 " "
  DefElem@18..34
    Location@18..26 "LOCATION"
    Whitespace@26..27 " "
    Default@27..34 "DEFAULT"
  Ascii59@34..35 ";"

