crates/pg_syntax/tests/snapshots/data/0047@5.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE DATABASE x TABLESPACE abc;
---
CreatedbStmt@0..33
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Database@7..15 "DATABASE"
  Whitespace@15..16 " "
  Ident@16..17 "x"
  Whitespace@17..18 " "
  DefElem@18..32
    Tablespace@18..28 "TABLESPACE"
    Whitespace@28..29 " "
    Ident@29..32 "abc"
  Ascii59@32..33 ";"

