crates/pg_syntax/tests/snapshots/data/0048@1.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLESPACE x LOCATION 'a';"
---
CreateTableSpaceStmt@0..33
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Tablespace@7..17 "TABLESPACE"
  Whitespace@17..18 " "
  Ident@18..19 "x"
  Whitespace@19..20 " "
  Location@20..28 "LOCATION"
  Whitespace@28..29 " "
  Sconst@29..32 "'a'"
  Ascii59@32..33 ";"

