crates/pg_syntax/tests/snapshots/data/0049@1.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE EXTENSION x;
---
CreateExtensionStmt@0..19
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Extension@7..16 "EXTENSION"
  Whitespace@16..17 " "
  Ident@17..18 "x"
  Ascii59@18..19 ";"

