crates/pg_syntax/tests/snapshots/data/0049@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE EXTENSION IF NOT EXISTS x CASCADE VERSION \"1.2\" SCHEMA a;"
---
CreateExtensionStmt@0..64
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Extension@7..16 "EXTENSION"
  Whitespace@16..17 " "
  IfP@17..19 "IF"
  Whitespace@19..20 " "
  Not@20..23 "NOT"
  Whitespace@23..24 " "
  Exists@24..30 "EXISTS"
  Whitespace@30..31 " "
  Ident@31..32 "x"
  Whitespace@32..33 " "
  DefElem@33..40
    Cascade@33..40 "CASCADE"
  Whitespace@40..41 " "
  DefElem@41..54
    VersionP@41..48 "VERSION"
    Whitespace@48..49 " "
    Ident@49..54 "\"1.2\""
  Whitespace@54..55 " "
  DefElem@55..63
    Schema@55..61 "SCHEMA"
    Whitespace@61..62 " "
    Ident@62..63 "a"
  Ascii59@63..64 ";"

