crates/pg_syntax/tests/snapshots/data/0051@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE UNIQUE INDEX title_idx ON films (title) INCLUDE (director, rating);"
---
IndexStmt@0..74
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Unique@7..13 "UNIQUE"
  Whitespace@13..14 " "
  Index@14..19 "INDEX"
  Whitespace@19..20 " "
  Ident@20..29 "title_idx"
  Whitespace@29..30 " "
  On@30..32 "ON"
  Whitespace@32..33 " "
  RangeVar@33..38
    Ident@33..38 "films"
  Whitespace@38..39 " "
  Ascii40@39..40 "("
  IndexElem@40..45
    Ident@40..45 "title"
  Ascii41@45..46 ")"
  Whitespace@46..47 " "
  Include@47..54 "INCLUDE"
  Whitespace@54..55 " "
  Ascii40@55..56 "("
  IndexElem@56..64
    Ident@56..64 "director"
  Ascii44@64..65 ","
  Whitespace@65..66 " "
  IndexElem@66..72
    Ident@66..72 "rating"
  Ascii41@72..73 ")"
  Ascii59@73..74 ";"

