crates/pg_syntax/tests/snapshots/data/0051@3.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE INDEX title_idx ON films (title) WITH (deduplicate_items = off);
---
IndexStmt@0..71
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..22 "title_idx"
  Whitespace@22..23 " "
  On@23..25 "ON"
  Whitespace@25..26 " "
  RangeVar@26..31
    Ident@26..31 "films"
  Whitespace@31..32 " "
  Ascii40@32..33 "("
  IndexElem@33..38
    Ident@33..38 "title"
  Ascii41@38..39 ")"
  Whitespace@39..40 " "
  With@40..44 "WITH"
  Whitespace@44..45 " "
  Ascii40@45..46 "("
  DefElem@46..69
    Ident@46..63 "deduplicate_items"
    Whitespace@63..64 " "
    Ascii61@64..65 "="
    Whitespace@65..66 " "
    TypeName@66..69
      Off@66..69 "off"
  Ascii41@69..70 ")"
  Ascii59@70..71 ";"

